# minora

./: .env.example  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini
.understand-anything/: .understandignore  knowledge-graph.json  meta.json
app/: logging_config.py  main.py  web_main.py
app/application/interfaces/: llm_provider.py  messenger.py  queue.py
app/application/services/: command_dispatcher.py
app/application/use_cases/: handle_command.py  handle_message.py  import_source.py  ingestion_orchestrator.py  knowledge_item.py  save_knowledge_item.py  save_link.py  web_knowledge.py
app/domain/entities/: command.py  knowledge.py  (+3 more)
app/infrastructure/: config.py
app/static/: api.js  app.js  index.html  style.css  ui.js  view_dashboard.js  view_detail.js  view_knowledge.js  view_others.js
configs/: agents.yaml  commands.yaml  web_config.yaml
data/: minora.db
docs/: 2 layer design.md  COMMANDS.md  COMMAND_SYSTEM.md  DATABASE.md  FEATURES.md  IMPORT_USAGE.md  POLLING_SETUP.md  REFACTOR_SUMMARY.md  SETUP_CHAT_ID.md  agent-embedd-v2.md  agent-embedd.md  clean-architechture.md  code-policies.md  database-design.md  file-content.md  implementation_plan.md  implementation_plan_v2.md  task.md  task_v2.md  walkthrough.md  walkthrough_v2.md
tests/integration/: test_link_saving.py  test_webhook.py
tests/unit/: test_agents.py  test_command_alias_routes.py  test_command_parser.py  test_gemini_provider.py  test_handle_message_use_case.py  test_help_handler.py  test_import_source.py  test_ingestion_orchestrator.py  test_knowledge_item_use_case.py  test_knowledge_repository.py  test_link_service.py  test_markdown_storage.py  test_message_service.py
tools/: demo_command_system.py  test_import_e2e.py  view_db.py
(+41 files in other folders)
