[project]
name = "minora"
version = "0.1.0"
description = ""
authors = [
    {name = "tuong.nguyen",email = "richardnguyen0715@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "redis (>=7.4.0,<8.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "greenlet (>=3.1.1,<4.0.0)",
    "pyyaml (>=6.0,<7.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.20.2,<2.0.0)",
    "beautifulsoup4 (>=4.13.0,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
